ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-lookup-ingress
  labels:
    app: ip-lookup
    component: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-ip-service
                port:
                  number: 80
